NXP-32774: Align on 2025 and start test without errors